--- a/src/informacoes-do-dia/informacoes-do-dia.html
+++ b/src/informacoes-do-dia/informacoes-do-dia.html
@@ -1,1 +1,9 @@
-Meu componente
+<div style="border: solid 1px; margin-top: 10px;">
+  <span><strong>HOJE</strong></span> {{ dia }}
+  <div>
+    Durante o dia <span>{{ nomeDiaria }}</span>
+  </div>
+  <div>
+    Pernoite <span>{{ nomePernoite }}</span>
+  </div>
+</div>
