Try to get weekday

--- a/src/informacoes-do-dia/informacoes-do-dia.html
+++ b/src/informacoes-do-dia/informacoes-do-dia.html
@@ -1,6 +1,6 @@
 <div class="outside-card ">
   <div style="margin-bottom: 10px;">
-    <span><strong>{{ adverbioTempo }}</strong></span> {{ dia }}
+    <span><strong>{{ adverbioTempo }}</strong></span> {{ diaMes }} {{ diaSemana }}
   </div>
   <div class="inside-card">
     <span style="text-decoration: underline; margin-right: 20px;">Durante o dia</span>
