--- a/src/informacoes-do-dia/informacoes-do-dia.html
+++ b/src/informacoes-do-dia/informacoes-do-dia.html
@@ -1,6 +1,6 @@
 <div class="outside-card ">
   <div class="header-card">
-    <div style="width: 100px;"><strong>{{ adverbioTempo }}</strong></div>
+    <div style="padding-left: 10px; width: 100px; text-shadow: -1px 4px 10px rgba(0,0,0,0.6);"><strong>{{ adverbioTempo }}</strong></div>
     <div style="width: 100px;">{{ diaSemana }}</div>
     <div>{{ diaMes }}</div>
   </div>
