--- a/src/main.html
+++ b/src/main.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">Quem vem?</h1>
+<h1 style="text-align: center; color: #dce6df;">Quem vem?</h1>
 <div *ngFor="let result of results; let i=index;">
   <informacoes-do-dia
     diaMes="{{result.diaMes}}"
