some more details

--- a/src/informacoes-do-dia/informacoes-do-dia.html
+++ b/src/informacoes-do-dia/informacoes-do-dia.html
@@ -5,7 +5,7 @@
     <div class="label-dia">{{ diaMes }}</div>
   </div>
   <div class="inside-card">
-    <div class="label-periodo">Durante<br>o dia</div>
+    <div class="label-periodo" style="padding: 2px 5px;">Durante<br>o dia</div>
     <div class="label-nome">{{ nomeDiaria | uppercase }}</div>
   </div>
   <div class="inside-card">
