responsive meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Quem vem?</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <my-app>Loading...</my-app>
